# bybit-grid-research

./: .env.example  .gitignore  00_PROJECT_CONTEXT_FOR_CODEX.md  01_PROJECT_RULES.md  02_TECHNICAL_SPEC.md  03_SPRINT_01_API_DATA_FEASIBILITY.md  04_CODEX_PROMPT_SPRINT_01.md  05_RISK_AND_RESEARCH_POLICY.md  AGENTS.md  GATE_04_FINAL_NUMPY_ENVIRONMENT_FIX_PROMPT.md  PROJECT_BOARD.md  README.md  SPRINT_01_6_PM_REVIEW_AND_CODEX_PROMPT.md  SPRINT_01_7_PRIVATE_VALIDATE_PM_PROMPT.md  SPRINT_01_8_VALIDATE_PARSER_AND_PRIVACY_HOTFIX.md  SPRINT_01_REVIEW_AND_SPRINT_01_5_PROMPT.md  SPRINT_02_1_PERFORMANCE_AND_DOWNLOAD_POLICY_PROMPT.md  SPRINT_02_2_NATIVE_GRID_FEASIBILITY_DECISION_PROMPT.md  SPRINT_02_3_FAST_MODE_AND_VALIDATE_SWEEP_REDESIGN_PROMPT.md  SPRINT_02_4_VALIDATE_ENABLED_GUARD_AND_ANALYZER_FIX_PROMPT.md  SPRINT_02_5_FAST_PIPELINE_AUTORUN_PROMPT.md  SPRINT_02_6_RISK_AWARE_DOWNLOAD_AND_RESEARCH_READINESS_PROMPT.md  SPRINT_02_7_FAST_QUALITY_REPORT_AND_DATA_HYGIENE_PROMPT.md  SPRINT_02_UNIVERSE_AND_VALIDATE_CONSTRAINTS_PROMPT.md  SPRINT_03_1_RANGE_EVENT_CALIBRATION_AND_FAST_VECTORIZATION_PROMPT.md  SPRINT_03_2_ACTIONABLE_RANGE_EVENTS_AND_RUN_ISOLATION_PROMPT.md  SPRINT_03_3_FAST_RANGE_CORE_AND_REVIEW_PACK_PROMPT.md  SPRINT_03_4_ACTIONABLE_DENSITY_AND_REVIEW_PACK_FIX_PROMPT.md  SPRINT_03_RANGE_CANDIDATE_DATASET_PROMPT.md  SPRINT_04_1_OUTCOME_DEDUPE_FUNDING_AND_GATE_FIX_PROMPT.md  SPRINT_04_2_OUTCOME_GATE_FINALIZATION_AND_NUMPY_HYGIENE_PROMPT.md  SPRINT_04_3_OUTCOME_SEMANTICS_ATR_AND_ACTIVITY_PROXIES_PROMPT.md  SPRINT_04_4_NATIVE_GRID_GEOMETRY_ALIGNMENT_PROMPT.md  (+46 more)
config/: bybit.yaml  (+4 more)
(+333 files in other folders)
